fixed menu z-index

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ Nav {
   align-self: start;
   top: 0;
   position: sticky;
+  z-index: 2;
 }
 
 .Overlay {
